[gd_scene load_steps=11 format=3 uid="uid://bbb34ijcxaiga"]

[ext_resource type="Script" uid="uid://c5egw3f2guqqm" path="res://Scripts/Movel/Enemys/shadow_boss.gd" id="1_cwku6"]
[ext_resource type="Script" uid="uid://dg4rgu71gxvwt" path="res://Scripts/Movel/Enemys/circle_draw.gd" id="2_o7wpx"]
[ext_resource type="AudioStream" uid="uid://bj8v2dwmoe01a" path="res://Assets/audio/sfx/boss/sfx11-boss_roar-324521.wav" id="3_pxi40"]
[ext_resource type="AudioStream" uid="uid://bftnmg8bckk8x" path="res://Assets/audio/sfx/boss/sfx12-boss_damage1-324520.wav" id="4_vt4l1"]
[ext_resource type="AudioStream" uid="uid://bon5x1qxpr3s5" path="res://Assets/audio/sfx/boss/sfx15-boss_attack2-324518.wav" id="5_ym3fs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3k1e"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ki401"]
size = Vector2(34, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cs6ny"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yws6g"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2c1m"]
size = Vector2(37.8641, 6.2136)

[node name="ShadowBoss" type="CharacterBody2D"]
position = Vector2(-3, 0)
scale = Vector2(5, 5)
script = ExtResource("1_cwku6")

[node name="are_hbTakeDamage" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="are_hbTakeDamage"]
shape = SubResource("RectangleShape2D_b3k1e")

[node name="are_hbAttack" type="Area2D" parent="." groups=["hbAttack"]]
position = Vector2(-16, -16)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="are_hbAttack"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_ki401")

[node name="Grafics" type="Node2D" parent="."]
position = Vector2(4, 4)

[node name="Shadow" type="Node2D" parent="Grafics"]
visible = false
script = ExtResource("2_o7wpx")

[node name="Enemy" type="Node2D" parent="Grafics"]

[node name="ColorRect" type="ColorRect" parent="Grafics/Enemy"]
offset_left = -20.0
offset_top = -20.0
offset_right = 12.0
offset_bottom = 12.0
color = Color(0.190762, 0.190762, 0.190762, 1)

[node name="ColorRect2" type="ColorRect" parent="Grafics/Enemy"]
offset_top = -16.0
offset_right = 8.0
offset_bottom = -8.0
color = Color(1, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="Grafics/Enemy"]
offset_right = 8.0
offset_bottom = 8.0
color = Color(1, 0, 0, 1)

[node name="are_checkPlayer" type="Area2D" parent="."]
monitorable = false

[node name="col_checkPlayer" type="CollisionShape2D" parent="are_checkPlayer"]
position = Vector2(3.2, -9.6)
shape = SubResource("RectangleShape2D_cs6ny")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yws6g")

[node name="Timer" type="Timer" parent="."]

[node name="are_scratch" type="Area2D" parent="." groups=["hbAttack"]]
scale = Vector2(1.03, 1.03)

[node name="col_scratch" type="CollisionShape2D" parent="are_scratch"]
position = Vector2(18.932, 0)
shape = SubResource("RectangleShape2D_r2c1m")
disabled = true

[node name="rec_scratch" type="ColorRect" parent="are_scratch"]
visible = false
offset_left = 1.0
offset_top = -3.0
offset_right = 38.0
offset_bottom = 3.0
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="Sfx_roar" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0.6, 0)
stream = ExtResource("3_pxi40")

[node name="Sfx_dead" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0.6, 2.38419e-07)
stream = ExtResource("4_vt4l1")

[node name="Sfx_scratch" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0.6, 9.53674e-07)
stream = ExtResource("5_ym3fs")

[connection signal="area_entered" from="are_hbTakeDamage" to="." method="_on_are_hb_take_damage_area_entered"]
[connection signal="area_exited" from="are_hbTakeDamage" to="." method="_on_are_hb_take_damage_area_exited"]
[connection signal="area_entered" from="are_checkPlayer" to="." method="_on_are_check_player_area_entered"]
